samples/_failures_safe/1761302122_f2eca3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5eecff0e.c: In function ‘main’:
./samples/SAFE/__tmp_5eecff0e.c:148:9: error: ‘decomp’ undeclared (first use in this function)
  148 |     if (decomp
      |         ^~~~~~
./samples/SAFE/__tmp_5eecff0e.c:148:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5eecff0e.c:148:15: error: expected ‘)’ at end of input
  148 |     if (decomp
      |        ~      ^
      |               )
./samples/SAFE/__tmp_5eecff0e.c:148:5: error: expected declaration or statement at end of input
  148 |     if (decomp
      |     ^~
